[project]
name = "elaborate"
version = "0.1.0"
description = "Look up a PyPI package without leaving the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Emily" }]
keywords = ["pypi", "cli", "package", "lookup", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
# Homepage = "https://github.com/not-em/elaborate"
# Repository = "https://github.com/not-em/elaborate"

[project.scripts]
elaborate = "elaborate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
